--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,11 @@
 #container{
     display: flex;
     flex-wrap: wrap;
-    width: 320px;
+    width: 100vh;
+    height: 70vh;
 }
 
 .square{
-    width: 20px;
-    height: 20px;
     border: 1px solid black;  
     transition: background-color 0.3s;
 }
